[project]
name = "brightdaybot"
version = "1.0.0"
description = "A Slack bot that celebrates birthdays with AI-generated personalized messages and images"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.8",
    "filelock>=3.20.1",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "slack-bolt>=1.22.0",
    "slack-sdk>=3.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Application scripts (not a library)
only-include = ["app.py"]

[tool.uv]
# Not a library - don't try to build/install the project itself
package = false

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
