[project]
name = "brightdaybot"
version = "1.1.0"
description = "A Slack bot that celebrates birthdays with AI-generated personalized messages and images"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.8.0",
    "filelock>=3.21.2",
    "httpx[socks]>=0.28.1",
    "icalendar>=7.0.0",
    "openai>=2.20.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "black>=26.1.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Application scripts (not a library)
only-include = ["app.py"]

[tool.uv]
# Not a library - don't try to build/install the project itself
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=26.1.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # Line too long (handled by black)
    "E402",  # Module level import not at top (intentional for circular import avoidance)
]

[tool.ruff.lint.per-file-ignores]
"integrations/calendarific.py" = ["F821"]  # Forward reference with import inside method

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
